--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,14 +1,16 @@
 TXT=txt
 HTML=html
+PDF=pdf
 MSECTION=1
 TSECTION=7
 
-.SUFFIXES: .$(TXT) .$(HTML) .$(TSECTION) .$(MSECTION)
+.SUFFIXES: .$(TXT) .$(HTML) .$(TSECTION) .$(MSECTION) .$(PDF)
 
 .PHONY: all tutorial manpage clean
 
 AD2HTML=asciidoctor
 AD2MAN=asciidoctor -b manpage
+AD2PDF=asciidoctor-pdf
 
 MANPAGE=qed-manpage
 TUTORIAL=qed-tutorial
@@ -19,7 +21,8 @@ TCOMMON= \
 
 TOUT= \
   $(TUTORIAL).$(TSECTION) \
-  $(TUTORIAL).$(HTML)
+  $(TUTORIAL).$(HTML) \
+  $(TUTORIAL).$(PDF)
 
 TIN= \
   $(TUTORIAL)-$(TSECTION).$(TXT) \
@@ -27,6 +30,9 @@ TIN= \
 
 .$(TXT).$(HTML):
 	$(AD2HTML) -o $*.$(HTML) $<
+
+.$(TXT).$(PDF):
+	$(AD2PDF) -o $*.$(PDF) $<
 
 .$(TXT).$(TSECTION):
 	$(AD2MAN) -o $*.$(TSECTION) $< 
@@ -42,6 +48,8 @@ clean:
 	rm -f $(TOUT)
 
 $(TUTORIAL).$(HTML): $(TUTORIAL).$(TXT) $(TCOMMON)
+
+$(TUTORIAL).$(PDF): $(TUTORIAL).$(TXT) $(TCOMMON)
 
 $(TUTORIAL).$(TSECTION): $(TUTORIAL)-$(TSECTION).$(TSECTION) $(TCOMMON)
 	mv $(TUTORIAL)-$(TSECTION).$(TSECTION) $(TUTORIAL).$(TSECTION)
