docs: add a _Qed_ program to post-process the tutorial manpage output.
`asciidoctor` _requires_ a `NAME` and a `SYNPOSIS` section to output
a manpage-formatted document. The script `fix.q` removes these sections
from the output, and replaces `NAME` with a more resonable title.

Thanks to `askr` for prompting this.

--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -48,6 +48,7 @@ $(TUTORIAL).$(HTML): $(TUTORIAL).$(TXT) $(TCOMMON)
 $(TUTORIAL).$(PDF): $(TUTORIAL).$(TXT) $(TCOMMON)
 	$(AD2PDF) -a as_article -o $@ $<
 
-$(TUTORIAL).$(SECTION): $(TUTORIAL).$(TXT) $(TCOMMON)
+$(TUTORIAL).$(SECTION): $(TUTORIAL).$(TXT) $(TCOMMON) fix.q
 	$(AD2MAN) -a as_manpage -o $@ $< 
+	echo '\\bb' | qed $@ fix.q 
 
