tutorial: manpage version had numerous formatting problems.
`asciidoctor` spits out some poor _troff_ in places. This commit
provides a _Qed_ script for the documentaion `Makefile` to use
to patch `qed-tutorial.7` into something acceptable.

--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -7,12 +7,15 @@ SECTION=7
 
 RELDIR=..
 
+QED=qed - -e
+
 AD2HTML=asciidoctor
 AD2MAN=asciidoctor -b manpage
 AD2PDF=asciidoctor-pdf
 
 TUTORIAL=qed-tutorial
 MANPAGE=qed.1
+TFIX=fix.q
 
 TCOMMON= \
   $(TUTORIAL)-body.$(TXT)
@@ -50,5 +53,5 @@ $(TUTORIAL).$(PDF): $(TUTORIAL).$(TXT) $(TCOMMON)
 
 $(TUTORIAL).$(SECTION): $(TUTORIAL).$(TXT) $(TCOMMON) fix.q
 	$(AD2MAN) -a as_manpage -o $@ $< 
-	echo '\\bb' | qed $@ fix.q 
+	$(QED) -x $(TFIX) $@ > /dev/null 2>&1
 
