doc Makefile: replace literal `fix.q` with variable `TFIX`

--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -51,7 +51,7 @@ $(TUTORIAL).$(HTML): $(TUTORIAL).$(TXT) $(TCOMMON)
 $(TUTORIAL).$(PDF): $(TUTORIAL).$(TXT) $(TCOMMON)
 	$(AD2PDF) -a as_article -o $@ $<
 
-$(TUTORIAL).$(SECTION): $(TUTORIAL).$(TXT) $(TCOMMON) fix.q
+$(TUTORIAL).$(SECTION): $(TUTORIAL).$(TXT) $(TCOMMON) $(TFIX)
 	$(AD2MAN) -a as_manpage -o $@ $< 
 	$(QED) -x $(TFIX) $@ > /dev/null 2>&1
 
